font weight fixed.

--- a/index.html
+++ b/index.html
@@ -39,8 +39,11 @@
 
         .logo {
             font-size: 28px;
-            font-weight: 900;
             color: white;
+            background: linear-gradient(135deg, #fd4e00 0%, #ff6b35 100%);
+            padding: 2px 30px;
+            border-radius: 33px;
+            font-weight: 600;
         }
 
         .nav-menu {
@@ -80,7 +83,7 @@
 
         .hero-title {
             font-size: 64px;
-            font-weight: 900;
+            font-weight: 800;
             line-height: 1.1;
             margin-bottom: 30px;
         }
@@ -127,7 +130,7 @@
         .section-title {
             text-align: center;
             font-size: 48px;
-            font-weight: 900;
+            font-weight: 800;
             margin-bottom: 20px;
         }
 
@@ -260,7 +263,7 @@
             align-items: center;
             justify-content: center;
             font-size: 24px;
-            font-weight: 900;
+            font-weight: 800;
             margin-bottom: 20px;
         }
 
@@ -360,7 +363,7 @@
 
         .popup-title {
             font-size: 48px;
-            font-weight: 900;
+            font-weight: 800;
             color: #333;
             margin-bottom: 20px;
             text-align: center;
@@ -435,7 +438,7 @@
 
         .final-cta h2 {
             font-size: 40px;
-            font-weight: 900;
+            font-weight: 800;
             margin-bottom: 20px;
         }
 
@@ -580,7 +583,7 @@
     </div>
 
     <header class="header">
-        <div class="logo">Zeeks</div>
+        <div class="logo">zeeks</div>
         <nav>
             <ul class="nav-menu">
                 <li><a href="#home">Home</a></li>
@@ -604,7 +607,7 @@
 
     <section class="section section-white">
         <div class="benefits-header">
-            <h2 style="font-size: 48px; font-weight: 900; line-height: 1.2; color: #333; text-align: center; max-width: 900px; margin: 0 auto 20px;">
+            <h2 style="font-size: 48px; font-weight: 800; line-height: 1.2; color: #333; text-align: center; max-width: 900px; margin: 0 auto 20px;">
                 Get compliant fast <u style="text-decoration-color: #fd4e00; text-decoration-thickness: 4px;">and accelerate your business</u>
             </h2>
             <p style="text-align: center; font-size: 20px; margin-bottom: 60px; max-width: 800px; margin-left: auto; margin-right: auto; color: #666;">
@@ -619,7 +622,7 @@
                         <path d="M12 2L13.09 8.26L22 9L13.09 15.74L12 22L10.91 15.74L2 9L10.91 8.26L12 2Z"/>
                     </svg>
                 </div>
-                <h3 style="font-size: 48px; font-weight: 900; color: #fd4e00; margin-bottom: 10px;">35+</h3>
+                <h3 style="font-size: 48px; font-weight: 800; color: #fd4e00; margin-bottom: 10px;">35+</h3>
                 <h4 style="font-size: 24px; font-weight: 700; margin-bottom: 15px; color: #333;">frameworks</h4>
                 <p>Zeeks supports all the compliance frameworks your startup needs as you grow—including SOC 2 and ISO 27001.</p>
             </div>
@@ -630,7 +633,7 @@
                         <path d="M12,2A2,2 0 0,1 14,4C14,4.74 13.6,5.39 13,5.73V7H14A7,7 0 0,1 21,14H22A1,1 0 0,1 23,15V18A1,1 0 0,1 22,19H21V20A2,2 0 0,1 19,22H5A2,2 0 0,1 3,20V19H2A1,1 0 0,1 1,18V15A1,1 0 0,1 2,14H3A7,7 0 0,1 10,7H11V5.73C10.4,5.39 10,4.74 10,4A2,2 0 0,1 12,2M7.5,13A0.5,0.5 0 0,0 7,13.5A0.5,0.5 0 0,0 7.5,14A0.5,0.5 0 0,0 8,13.5A0.5,0.5 0 0,0 7.5,13M16.5,13A0.5,0.5 0 0,0 16,13.5A0.5,0.5 0 0,0 16.5,14A0.5,0.5 0 0,0 17,13.5A0.5,0.5 0 0,0 16.5,13Z"/>
                     </svg>
                 </div>
-                <h3 style="font-size: 48px; font-weight: 900; color: #fd4e00; margin-bottom: 10px;">375+</h3>
+                <h3 style="font-size: 48px; font-weight: 800; color: #fd4e00; margin-bottom: 10px;">375+</h3>
                 <h4 style="font-size: 24px; font-weight: 700; margin-bottom: 15px; color: #333;">integrations</h4>
                 <p>Stay on top of your compliance status across your entire stack—automatically—with Zeeks many powerful integrations. Plus, easily build custom integrations with the Zeeks API.</p>
             </div>
@@ -752,7 +755,7 @@
 
     <section class="final-cta" style="background: white; padding: 0 0 0 0; position: relative; margin-top: -36px">
         <div style="background: linear-gradient(135deg, #fd4e00 0%, #ff6b35 100%); margin: 0 60px; border-radius: 20px; padding: 60px 40px; text-align: center; position: relative; z-index: 10; transform: translateY(160px);">
-            <h2 style="font-size: 40px; font-weight: 900; margin-bottom: 20px; color: white;">Be The First To Use Zeeks</h2>
+            <h2 style="font-size: 40px; font-weight: 800; margin-bottom: 20px; color: white;">Be The First To Use Zeeks</h2>
             <p style="font-size: 18px; margin-bottom: 40px; opacity: 0.9; color: white;">Join the waitlist and be the first to experience effortless, AI-powered compliance management. Stay ahead, stay compliant!</p>
             <a href="#demo" class="cta-button" style="background: white; color: #fd4e00;">Request a demo</a>
         </div>
@@ -762,7 +765,7 @@
         <div style="max-width: 1200px; margin: 0 auto;">
             <div style="display: grid; grid-template-columns: 2fr 1fr 1fr 1fr; gap: 60px; margin-bottom: 40px;">
                 <div>
-                    <div style="font-size: 28px; font-weight: 900; color: white; margin-bottom: 20px;">Zeeks</div>
+                    <div style="font-size: 28px; font-weight: 800; color: white; margin-bottom: 20px;">Zeeks</div>
                     <p style="font-size: 16px; line-height: 1.6; color: #ccc; margin-bottom: 20px;">
                         AI-powered compliance solutions that make regulatory management simple, smart, and efficient. Built by experts with 22+ years of experience.
                     </p>
