top line text changed

--- a/index.html
+++ b/index.html
@@ -600,7 +600,7 @@
         <div class="hero-badge">Built by compliance experts with 22+ years of experience</div>
         <h1 class="hero-title">We make Compliance Easy</h1>
         <p class="hero-description">
-            Compliance doesn't have to be complicated. Zeeks simplifies audits, automates risk management, and delivers AI-driven insights—so you can stay compliant without the stress!
+            Compliance doesn't have to be complicated.<br />Zeeks simplifies audits, automates risk management, <br />so you can stay compliant without the stress!
         </p>
         <a href="#waitlist" class="cta-button">Join Waitlist</a>
     </section>
