hide book a consultation button.

--- a/index.html
+++ b/index.html
@@ -812,7 +812,8 @@
                         Zeeks simplifies audits, automates risk management, so you can stay compliant without the stress!
                     </p>
                     
-                    <a href="#waitlist" class="cta-button" style="background: #fd4e00; color: white; box-shadow: 0 10px 30px rgba(253, 78, 0, 0.3);">Join Waitlist</a>
+                    <!-- <a href="#waitlist" class="cta-button" style="background: #f2f2f2; color: #595959; box-shadow: 0 10px 30px rgb(145 145 145 / 30%)">Book a Consultation</a> -->
+                    <a href="#waitlist" class="cta-button" style="background: #fd4e00; color: white; box-shadow: 0 10px 30px rgba(253, 78, 0, 0.3);">Request a Demo</a>
                 </div>
                 
                 <!-- Right Content - Dashboard Preview -->
